--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,12 +6,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" >  
+  <ion-item [hidden]="mostrar">
+    <ion-range min="0" max="256" [(ngModel)]="valorRange" color="secondary" (ionChange)="onRangeChange($event)">
+      <ion-label slot="start"><ion-icon name="sad-outline" size="large"></ion-icon></ion-label>
+      <ion-label slot="end"><ion-icon name="happy-outline" size="large"></ion-icon></ion-label>
+    </ion-range>
+  </ion-item>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-img [src]="imagem" style="height: 400px"></ion-img>
+
 </ion-content>
