--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,21 +6,20 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" >
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-card>
+  <ion-card class="ion-text-center">
     <ion-card-header>
       <ion-card-title>Clique no botão para mostrar o modal</ion-card-title>
     </ion-card-header>
-
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button color="success" (click)="mostrarModal()">Mostrar modal</ion-button>
+          <ion-button  color="success" (click)="mostrarModal()" >Mostrar modal</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>  
