--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,17 +9,33 @@
 <ion-content [fullscreen]="true">
 
   <ion-card>
-    <ion-card-header>
-      <ion-card-title>Tab de select</ion-card-title>
-      <ion-card-subtitle size="large">Valor selecionado : {{valorSelect}}</ion-card-subtitle>
+    <ion-card-header >
+      <ion-card-title>Selecione um valor</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-select placeholder="Selecione um" [(ngModel)]="valorSelect">
-        <ion-select-option value="1" >Um</ion-select-option>
-        <ion-select-option value="2" >Dois</ion-select-option>        
-        <ion-select-option value="3" >Três</ion-select-option>
-      </ion-select>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="4">
+            <ion-select [(ngModel)]="valorSelect">
+              <ion-select-option value="1">Um</ion-select-option>
+              <ion-select-option value="2">Dois</ion-select-option>
+              <ion-select-option value="3">Três</ion-select-option>
+            </ion-select>
+          </ion-col>
+          <ion-col>
+            <ion-card id="cardTab2" color="primary" class="ion-text-center">
+              <ion-text>
+                <h1>{{valorSelect}}</h1>
+              </ion-text>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+
+
+
     </ion-card-content>
   </ion-card>
 
