--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,6 +14,6 @@
     </ion-range>
   </ion-item>
 
-  <ion-img [src]="imagem" style="height: 400px"></ion-img>
+  <ion-img id="imgTab3" [src]="imagem" size="4"></ion-img>
 
 </ion-content>
