--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,33 +10,19 @@
 
   <ion-card>
     <ion-card-header >
-      <ion-card-title>Selecione um valor</ion-card-title>
-    </ion-card-header>
-
-    <ion-card-content>
+      <ion-card-title><h1>Valor selecionado: <span>{{valorSelect}}</span></h1></ion-card-title>
       <ion-grid>
         <ion-row>
-          <ion-col size="4">
+          <ion-col size="6">
             <ion-select [(ngModel)]="valorSelect">
               <ion-select-option value="1">Um</ion-select-option>
               <ion-select-option value="2">Dois</ion-select-option>
               <ion-select-option value="3">Três</ion-select-option>
             </ion-select>
-          </ion-col>
-          <ion-col>
-            <ion-card id="cardTab2" color="primary" class="ion-text-center">
-              <ion-text>
-                <h1>{{valorSelect}}</h1>
-              </ion-text>
-            </ion-card>
-          </ion-col>
+          </ion-col>          
         </ion-row>
       </ion-grid>
-
-
-
-
-    </ion-card-content>
+    </ion-card-header>
   </ion-card>
 
 
